@@ -34,7 +34,12 @@ typedef struct ocaml_flac_decoder_callbacks {
   /* This is used for ogg callbacks. */
   void *private;
   /* This is used for callback from caml. */ 
-  value callbacks;
+  value read;
+  value seek;
+  value tell;
+  value length;
+  value eof;
+  value write;
   FLAC__StreamMetadata_StreamInfo *info;
   FLAC__StreamMetadata *meta;
 } ocaml_flac_decoder_callbacks;
@@ -43,6 +48,23 @@ typedef struct ocaml_flac_decoder {
   FLAC__StreamDecoder *decoder ;
   ocaml_flac_decoder_callbacks callbacks;
 } ocaml_flac_decoder;
+
+#define Fill_dec_values(x,c) { \
+  caml_modify_generational_global_root(&(x->callbacks.read),Field(c,0)); \
+  caml_modify_generational_global_root(&(x->callbacks.seek),Field(c,1)); \
+  caml_modify_generational_global_root(&(x->callbacks.tell),Field(c,2)); \
+  caml_modify_generational_global_root(&(x->callbacks.length),Field(c,3)); \
+  caml_modify_generational_global_root(&(x->callbacks.eof),Field(c,4)); \
+  caml_modify_generational_global_root(&(x->callbacks.write),Field(c,5)); \
+}
+#define Free_dec_values(x) { \
+  caml_modify_generational_global_root(&(x->callbacks.read),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.seek),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.tell),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.length),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.eof),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.write),Val_unit); \
+}
 
 value ocaml_flac_decoder_alloc(struct custom_operations *decoder_ops);
 
@@ -68,7 +90,9 @@ void dec_error_callback(const FLAC__StreamDecoder *decoder,
 
 typedef struct ocaml_flac_encoder_callbacks {
   /* This is used by the caml encoder. */
-  value callbacks;
+  value write;
+  value seek;
+  value tell;
   /* This is used by the ogg encoder. */
   void *private;
 } ocaml_flac_encoder_callbacks;
@@ -80,6 +104,17 @@ typedef struct ocaml_flac_encoder {
   FLAC__int32 *lines;
   ocaml_flac_encoder_callbacks callbacks;
 } ocaml_flac_encoder;
+
+#define Fill_enc_values(x,c) { \
+  caml_modify_generational_global_root(&(x->callbacks.write),Field(c,0)); \
+  caml_modify_generational_global_root(&(x->callbacks.seek),Field(c,1)); \
+  caml_modify_generational_global_root(&(x->callbacks.tell),Field(c,2)); \
+}
+#define Free_enc_values(x) { \
+  caml_modify_generational_global_root(&(x->callbacks.write),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.seek),Val_unit); \
+  caml_modify_generational_global_root(&(x->callbacks.tell),Val_unit); \
+}
 
 /* Caml abstract value containing the decoder. */
 #define Encoder_val(v) (*((ocaml_flac_encoder**)Data_custom_val(v)))
