@@ -4,6 +4,7 @@
 * Register global roots using caml_register_generational_global_root
 * Remove tmp field from encoder and decoder and use proper variable
   registration when appropriate.
+* Be specific about each callback registered as global root.
 
 0.1.3 (07-10-2017)
 =====
